# rimilo

./: Cargo.toml  build.rs
src/: argaro.rs  main.rs
vortaro/: frazaro.yaml  vortaro.yaml
