[package]
name = "rimilo"
version = "0.1.0"
edition = "2021"
description = "Jam Alia Vort{ar,il}o por trci rimvortojn."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
regex = "1.5"
phf = "0.10"

[build-dependencies]
phf_codegen = "0.10"
serde_yaml = "0.8"
