[package]
name = "rimilo"
version = "0.2.2"
edition = "2021"
description = "Jam Alia Vort{ar,il}o por trci rimvortojn."
license = "MIT"
homepage = "https://github.com/Fierthraix/proverbilo"
repository = "https://github.com/Fierthraix/proverbilo.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
regex = "1.8"
phf = "0.11"

[build-dependencies]
phf_codegen = "0.11"
serde_yaml = "0.9"
